# worldview

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-DOCS.md  README.md  README_QUICKSTART.md  RELEASE_GUIDE.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: cli.md  index.md  reference.md  templates.md
src/diamond_setup/: __init__.py  cli.py  preset.py  validator.py
src/diamond_setup/templates/: __init__.py  genesis.py  minimal.py
src/worldview/: __init__.py
src/worldview/cli/: __init__.py  main.py
src/worldview/core/: __init__.py  critique.py  worldview.py
src/worldview/governance/: __init__.py  alignment.py
tests/: test_alignment.py  test_cli.py  test_critique.py  test_integration.py  test_preset.py  test_validator.py  test_worldview_engine.py
