[project]
name = "worldview"
version = "0.1.0"
description = "Philosophical-ethical worldview layer with normative metrics, criticality and common-good alignment for GenesisAeon"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "GenesisAeon", email = "genesis@genesisaeon.dev" }]
requires-python = ">=3.11"
keywords = [
    "worldview",
    "ethics",
    "philosophy",
    "normative-metrics",
    "criticality",
    "common-good",
    "genesisaeon",
    "emergence",
    "coherence",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7",
    "numpy>=1.26",
    "scipy>=1.13",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-autorefs>=1.0.0",
    "mkdocstrings[python]>=0.25.0",
]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.100.0",
]
full-stack = [
    "unified-mandala>=0.2.0",
    "aeon-ai>=0.2.0",
    "genesis-os>=0.2.0",
    "universums-sim>=0.1.0",
    "entropy-governance>=0.1.0",
    "sigillin>=0.1.0",
    "utac-core>=0.1.0",
]

[project.scripts]
worldview = "worldview.cli.main:app"

[project.urls]
Repository = "https://github.com/GenesisAeon/worldview"
Issues = "https://github.com/GenesisAeon/worldview/issues"
Documentation = "https://genesisaeon.github.io/worldview"
Zenodo = "https://doi.org/10.5281/zenodo.worldview"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldview"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=worldview --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 99
